new build.gradle & some menu.prop tweeks